Fix top menu, display block only on mobile

--- a/_sass/_site.scss
+++ b/_sass/_site.scss
@@ -245,6 +245,8 @@ ul {
   .header-about {
     padding-bottom: 3rem;
     display: none;
+
+    a { display: inline-block; }
   }
 }
 
